# amem

./: .gitignore  BENCHMARK.md  COMPETITORS.md  LICENSE  README.md  ROADMAP.md  config.yaml  demo.py  demo_comparison.py  eval_conversation.py  eval_dump_memory.py  eval_evolution.py  eval_scenarios.py  pyproject.toml  serve_api.py  serve_proxy.py  test_real.py
.claude/: settings.local.json
amem/: __init__.py  config.py
amem/behavioral/: __init__.py  profile.py
amem/embeddings/: __init__.py  anthropic_embed.py  base.py  factory.py  local_embed.py  ollama.py  openai_embed.py
amem/episodic/: __init__.py  chunker.py  enricher.py  importance.py  smart_dedup.py  store.py  temporal_index.py  vector_index.py
amem/explicit/: __init__.py  store.py
amem/feedback/: relevance.py
amem/maintenance/: consolidation.py  summarizer.py
amem/persistence/: disk.py  migrations.py  sqlite.py
amem/retrieval/: __init__.py  intent.py  knowledge_assembler.py  orchestrator.py
amem/semantic/: __init__.py  decay.py  (+10 more)
api/: app.py  models.py  openai_compat.py
benchmarks/: head_to_head.py  run_full_compare.py  run_locomo.py  run_locomo_full.py  run_memory.py  run_now.py  run_verified.py
cli/: main.py
dashboard/: index.html
mcp/: claude_desktop_config.json  server.py
tests/: test_api.py  test_budget.py  test_contradictions.py  test_episodic.py  test_feedback_and_consolidation.py  test_integration.py  test_integration_real.py  test_mcp_and_proxy.py  test_providers.py  test_resolver.py  test_retrieval.py  test_semantic.py  test_sqlite.py  test_tai.py  test_vector_index.py
(+7 files in other folders)
